[package]
name = "game_pass"
version = "0.1.0"
description = "Game Pass Helps developer manage gamestates, leaderboards, badges and users information"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
